src/objects/Account_Communication__c.object
<CustomObject>
    <description>Link Accounts to their associated Addresses, Phone Numbers, Emails, etc..  Many-to-many relationship.</description>
    <fields>
        <fullName>Account_Business_Role_SFID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Business Role Lookup associated with the Account&apos;s Address/Phone/Email/etc.</description>
        <inlineHelpText>Business Role Lookup associated with the Account&apos;s Address/Phone/Email/etc.</inlineHelpText>
        <label>Account Business Role</label>
        <referenceTo>Account_Business_Role__c</referenceTo>
        <relationshipLabel>Account Communications</relationshipLabel>
        <relationshipName>Account_Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_SFID__c</fullName>
        <description>Account related to the Communication</description>
        <inlineHelpText>Account related to the Communication</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Communications</relationshipLabel>
        <relationshipName>Account_Communications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Archive_Date__c</fullName>
        <description>Holds the date when the record was last marked for Archival.</description>
        <inlineHelpText>Date Archive Indicator was set to &quot;Y&quot;.</inlineHelpText>
        <label>Archive Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Archive_Ind__c</fullName>
        <defaultValue>&quot;N&quot;</defaultValue>
        <description>&quot;Y&quot; Indicates that the record is ready for archival.</description>
        <inlineHelpText>&quot;Y&quot; indicates record is ready for archival.</inlineHelpText>
        <label>Archive Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Name__c</fullName>
        <description>City Name</description>
        <inlineHelpText>City Name</inlineHelpText>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comm_Role_Descr_List__c</fullName>
        <description>List of Communication Roles associated with the Account-Communication.</description>
        <inlineHelpText>List of Communication Roles associated with the Account-Communication.</inlineHelpText>
        <label>Communication Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Mailing</fullName>
                </value>
                <value>
                    <fullName>-- None --</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <description>Country Name</description>
        <inlineHelpText>Country Name</inlineHelpText>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Addr__c</fullName>
        <description>Email Address</description>
        <inlineHelpText>Email Address</inlineHelpText>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FIPS_Code__c</fullName>
        <description>The FIPS county code is a five-digit Federal Information Processing Standard (FIPS) code (FIPS 6-4) which uniquely identifies counties and county equivalents in the United States, certain U.S. possessions, and certain freely associated states. The first two digits are the FIPS state code and the last three are the county code within the state or possession.</description>
        <inlineHelpText>The FIPS county code is a five-digit Federal Information Processing Standard (FIPS) code (FIPS 6-4) which uniquely identifies counties and county equivalents in the United States, certain U.S. possessions, and certain freely associated states.</inlineHelpText>
        <label>FIPS Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geocode__c</fullName>
        <description>Longitude/Latitude of an Address</description>
        <inlineHelpText>Longitude/Latitude of an Address</inlineHelpText>
        <label>Geocode</label>
        <scale>9</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>HC_Integration_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Integration Key for use with Heroku interface.</description>
        <externalId>true</externalId>
        <inlineHelpText>Integration Key for use with Heroku interface.</inlineHelpText>
        <label>Heroku Connect Integration Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Parent_SFID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Address/Phone/Email/etc. related to the Account Communication Role</description>
        <inlineHelpText>Account Address/Phone/Email/etc. related to the Account Communication Role</inlineHelpText>
        <label>Parent Account Communication</label>
        <referenceTo>Account_Communication__c</referenceTo>
        <relationshipLabel>Account Communication</relationshipLabel>
        <relationshipName>Account_Communications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Extension_Number__c</fullName>
        <description>Phone Extension - For individuals/businesses that have an internal phone system, the additional numbers dialed once the internal system is connected to from the outside (Phone Number).</description>
        <inlineHelpText>Phone Extension - For individuals/businesses that have an internal phone system, the additional numbers dialed once the internal system is connected to from the outside (Phone Number).</inlineHelpText>
        <label>Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>Phone Number</description>
        <inlineHelpText>Phone Number</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>Postal Code</description>
        <inlineHelpText>Postal Code</inlineHelpText>
        <label>Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Descr__c</fullName>
        <description>Role for the Account Communication</description>
        <inlineHelpText>Role for the Account Communication</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Mailing</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <description>State Name</description>
        <inlineHelpText>State Name</inlineHelpText>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Addr__c</fullName>
        <description>Street Address</description>
        <inlineHelpText>Street Address</inlineHelpText>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>has_Do_Not_Call_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked indicates that the Contact has requested to not be called.</description>
        <inlineHelpText>Checked indicates that the Contact has requested to not be called.</inlineHelpText>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>has_Do_Not_Email_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked indicates that the Account has requested to not be emailed by Monsanto.</description>
        <inlineHelpText>Checked indicates that the Account has requested to not be emailed by Monsanto.</inlineHelpText>
        <label>Do Not Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Fax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Can Faxes be send to this Phone Number?</description>
        <inlineHelpText>Can Faxes be send to this Phone Number?</inlineHelpText>
        <label>Fax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Mobile_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Phone Number to a Mobile Phone/device?</description>
        <inlineHelpText>Is the Phone Number to a Mobile Phone/device?</inlineHelpText>
        <label>Mobile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Primary_Communication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is a Primary Communication within the Selected Role, if multiple records exist, for the Account.  For example, if the Account has multiple Shipping locations, but one is the primary Shipping location, then the primary may be checked.</description>
        <inlineHelpText>Is a Primary Communication within the Selected Role, if multiple records exist, for the Account.  For example, if the Account has multiple Shipping locations, but one is the primary Shipping location, then the primary may be checked.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Voice_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Phone Number to a Voice Phone/device?</description>
        <inlineHelpText>Is the Phone Number to a Voice Phone/device?</inlineHelpText>
        <label>Voice</label>
        <type>Checkbox</type>
    </fields>
    <label>Account Communication</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AC-{0}</displayFormat>
        <label>Account Communication Identifier</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Communications</pluralLabel>
    <recordTypes>
        <fullName>Account_Communication_Address</fullName>
        <active>true</active>
        <description>The record type is for physical addresses such as: Mailing, Billing, Shipping, etc.</description>
        <label>Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Communication_Address_Role</fullName>
        <active>true</active>
        <description>The record type for physical address&apos; role.</description>
        <label>Address Role</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Communication_Address_Role_Business_Role</fullName>
        <active>true</active>
        <description>The record type for physical address&apos; role&apos;s Business Role.</description>
        <label>Address Role Business Role</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Communication_Default</fullName>
        <active>true</active>
        <description>Default Record Type</description>
        <label>Account Communication</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Communication_Email</fullName>
        <active>true</active>
        <description>This record type is for email addresses.</description>
        <label>Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Communication_Email_Role</fullName>
        <active>true</active>
        <description>The record type for email address&apos;s role.</description>
        <label>Email Role</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Communication_Email_Role_Business_Role</fullName>
        <active>true</active>
        <description>The record type for email address&apos;s role&apos;s Business Role.</description>
        <label>Email Role Business Role</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Communication_Phone</fullName>
        <active>true</active>
        <description>This record type is for phone numbers.</description>
        <label>Phone</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Communication_Phone_Role</fullName>
        <active>true</active>
        <description>The record type for phone number&apos;s role.</description>
        <label>Phone Role</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Communication_Phone_Role_Business_Role</fullName>
        <active>true</active>
        <description>The record type for phone number&apos;s role&apos;s Business Role.</description>
        <label>Phone Role Business Role</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>